Made adjustments to the layout

--- a/HTMLpages/Humidity.html
+++ b/HTMLpages/Humidity.html
@@ -55,13 +55,12 @@
 	<!-- Inserting the body and the content -->
 	<!-- Create a container, insert 1 row and 2 columns (sizes 8 and 4)	-->
 	<!-- <div class = "background"> -->
-	<main class="container">
+	<main class="container"id="box1">
 		<section class = "row">
-			<article class = "col-md-8" id="box1">
+			<div class = "col-sm-8" id="box1-1">
 				<header><h1>Humidity</h1></header>
 				<hr>
-					<!-- <section id="body_summ">
-						<section id="figure"> -->
+
 						<img class="center" src="../Resources/assets/images/Fig2.png" alt="City Latitude vs. Max Temperature chart.">
 						<!-- </section> -->
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum risus ut justo laoreet consectetur. 
@@ -70,20 +69,20 @@
 					 		Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris rhoncus eget nulla in ornare.</p> 
 		
 					<!-- </section> -->
-			</article>
+				</div>
 
-			<article class = "col-md-4" id="box2">
-					<header><h2>Visualizations</h2></header> 
+			<div class = "col-sm-4" id="box1-2">
+					<header><h3>Visualizations</h3></header> 
 					<hr>
-						<div class= "col-md-6">
+						<div class= "col-sm-6">
 							<a href="MaxTemp.html"><img id="vis_img" src="../Resources/assets/images/Fig1.png"></a>
 							<a href="Cloudiness.html"><img id = "vis_img" src="../Resources/assets/images/Fig3.png"></a>
 						</div>
-						<div class= "col-md-6">
+						<div class= "col-sm-6">
 							<a href="Humidity.html"><img id="vis_img" src="../Resources/assets/images/Fig2.png"></a>	
 							<a href="WindSpeed.html"><img id = "vis_img" src="../Resources/assets/images/Fig4.png"></a>
 						</div>
-				</article>
+					</div>
 		</section>
 
 	</main>
