--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<a class="dropdown-toggle" id= "color-me" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plots <span class="caret"></span></a>
 				<!-- drowdown menu for plots option-->
 				<ul class="dropdown-menu">
-				  <li><a href="HTMLpages/MaxTemp.html">Max Temperature</a></li>
+				  <li><a href="HTMLpages/MaxTemp.html">Max Temperature</a></li> <!-- style="color:white"-->
 				  <li><a href="HTMLpages/Humidity.html">Humidity</a></li>
 				  <li><a href="HTMLpages/Cloudiness.html">Cloudiness</a></li>
 				  <li><a href="HTMLpages/WindSpeed.html">Wind Speed</a></li>
@@ -57,14 +57,12 @@
 	<!-- <div class = "background"> -->
 	<main class="container"id="box1">
 		<section class = "row">
-			<div class = "col-md-8" id = "box1-1">
-				<article>
+			<div class = "col-sm-8" id = "box1-1">
+				<!-- <article> -->
 					<header><h1>Summary: Latitude vs. X</h1></header>
 					<hr>
-				<!-- <section id="body_summ">
-						<section id="figure"> -->
-						<img id="image_summ" class = "col-md-8" src="Resources/assets/images/Fig1.png" alt="City Latitude vs. Max Temperature chart.">
-						<!-- </section> -->
+						<img id="image_summ" class = "col-sm-8" src="Resources/assets/images/Fig1.png" alt="City Latitude vs. Max Temperature chart.">
+						
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum risus ut justo laoreet consectetur. 
 						Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc dui neque, malesuada 
 						egestas aliquet ac, commodo in magna. Etiam mollis odio at mi maximus hendrerit. Integer aliquam id lectus nec hendrerit.
@@ -73,12 +71,11 @@
 					 	<p>Maecenas massa nibh, commodo non condimentum eu, congue tempus neque. Donec neque mi, ullamcorper eget fringilla et, iaculis 
 					 		vitae tortor. Curabitur vel nunc vel mi lobortis ornare ut non nulla. Etiam ornare libero ac suscipit aliquam. Nunc venenatis 
 					 		felis sit amet velit vehicula interdum. Vivamus iaculis condimentum nulla vitae.</p>
-					<!-- </section> -->
-				</article>
+				<!-- </article> -->
 			</div>
 			<div class = "col-sm-4" id="box1-2">
 				<article>
-					<header><h2>Visualizations</h2></header> 
+					<header><h3>Visualizations</h3></header> 
 					<hr>
 						<div class= "col-sm-6">
 							<a href="HTMLpages/MaxTemp.html"><img id="vis_img" src="Resources/assets/images/Fig1.png"></a>
