--- a/HTMLpages/Comparison.html
+++ b/HTMLpages/Comparison.html
@@ -64,8 +64,8 @@
 
 		<!-- Create the body where images go => insert 2 rows and 2 columns in each row -->
 		<div class= "row">
-			<div class="col-md-6">
-				<div class="row" style="margin-left:125px;"> <!-- "text-align:center" -->
+			<div class="col-sm-6">
+				<div class="row" style="margin-left:20%;"> <!-- "text-align:center" "margin-left:20%;"-->
 					<h4>vs Temp</h4>
 				</div>
 				<div class="row">
@@ -73,8 +73,8 @@
 				</div>
 			</div>
 
-			<div class="col-md-6">
-				<div class="row" style="margin-left:125px;">  <!-- "text-align:center" -->
+			<div class="col-sm-6">
+				<div class="row" style="margin-left:20%;">  <!-- "text-align:center" -->
 					<h4>vs Humidity</h4>
 				</div>
 				
@@ -86,7 +86,7 @@
 
 		<div class= "row">
 			<div class="col-md-6">
-				<div class="row" style="margin-left:125px;"> <!-- "text-align:center" -->
+				<div class="row" style="margin-left:20%;"> <!-- "text-align:center" -->
 					<h4>vs Cloudiness</h4>
 				</div>
 				<div class="row">
@@ -95,7 +95,7 @@
 			</div>
 
 			<div class="col-md-6">
-				<div class="row" style="margin-left:125px;"> <!-- "text-align:center" -->
+				<div class="row" style="margin-left:20%;"> <!-- "text-align:center" -->
 					<h4>vs Wind Speed</h4>
 				</div>
 				
